--- a/server/build.gradle
+++ b/server/build.gradle
@@ -22,11 +22,18 @@ repositories {
 }
 
 dependencies {
+
+	// Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	// Swagger
+	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2")
+
+	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
