test: raspberry connect via mqtt

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -6,3 +6,8 @@ spring:
         active: default
         include:
             - document
+
+mqtt:
+    broker:
+        host: 129.254.174.120
+        port: 1883
